# hafnia

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  flake.nix
.cargo-husky/hooks/: pre-commit
cavy/: Cargo.toml
cavy-cli/: Cargo.toml
cavy-cli/src/: cli.yml  main.rs  repl.rs
cavy-comptime/: Cargo.toml
cavy-comptime/src/: diagnostics.rs  lib.rs
cavy-core/: Cargo.toml  build.rs
cavy-core/src/: alloc.rs  arch.rs  ast.rs  cavy_errors.rs  circuit.rs  compile.rs  context.rs  functions.rs  interpreter.rs  lib.rs  lowering.rs  mir.rs  num.rs  parser.rs  place_tree.rs  scanner.rs  session.rs  source.rs  store.rs  sys.rs  target.rs  token.rs  types.rs  util.rs  values.rs
cavy-core/src/analysis/: call_graph.rs  common.rs  controls.rs  dataflow.rs  feedback.rs  fmt.rs  linearity.rs  mod.rs  subconditional.rs  unsafety.rs
cavy-core/src/analysis/borrows/: ascription.rs  borrow_check.rs  liveness.rs  loan_scope.rs  mod.rs  regions.rs
cavy-core/src/analysis/graph/: algorithm.rs  dominators.rs  mod.rs
cavy-core/src/analysis/lifetimes/: ascription.rs  liveness.rs  loan_scope.rs  mod.rs  regions.rs  util.rs
cavy-core/src/codegen/: dynamic.rs  lir.rs  mod.rs
cavy-core/src/codegen/dynamic/: algorithm.rs  compute.rs  gates.rs  mem.rs  mod.rs  uncompute_pts.rs  util.rs
cavy-core/src/codegen/static/: lir.rs
cavy-core/src/opt/: cleanup.rs  comptime.rs  const_prop.rs  constprop.rs  def_use_chains.rs  mod.rs  unipotence.rs  util.rs
cavy-core/tests/: circuit_tests.rs  compile_tests.rs  integration_tests.rs  regression_tests.rs
cavy-core/tests/circuit/: circuit_test.py  mod.rs
cavy-core/tests/common/: mod.rs
cavy-inline/: Cargo.toml
cavy-inline/src/: lib.rs  nightly.rs  types.rs
cavy-macros/: Cargo.toml
cavy-macros/src/: lib.rs
cavy/src/: alloc.rs  arch.rs  ast.rs  cavy_errors.rs  cfg.rs  circuit.rs  codegen.rs  compile.rs  context.rs  interpreter.rs  lib.rs  lowering.rs  mir.rs  num.rs  parser.rs  scanner.rs  session.rs  source.rs  store.rs  target.rs  token.rs  typecheck.rs  types.rs  values.rs
cavy/src/analysis/: call_graph.rs  common.rs  feedback.rs  linearity.rs  mod.rs
cavy/tests/: integration_tests.rs
cavy_macros/: Cargo.toml
cavy_macros/cavy_macros/src/: lib.rs
cavy_macros/src/: lib.rs
examples/: bell_pair.cavy  simple_grover.cavy  toffoli.cavy
hafnia/: Cargo.toml
hafnia-cli/: Cargo.toml
hafnia-cli/src/: lib.rs  main.rs  repl.rs
hafnia-core/: Cargo.toml  build.rs
hafnia-core/src/: arch.rs  ast.rs  circuit.rs  compile.rs  context.rs  functions.rs  hafnia_errors.rs  interpreter.rs  lib.rs  lowering.rs  mir.rs  num.rs  parser.rs  qram.rs  scanner.rs  session.rs  source.rs  store.rs  sys.rs  token.rs  values.rs
hafnia-core/src/analysis/: call_graph.rs  controls.rs  dataflow.rs  feedback.rs  linearity.rs  mod.rs  subconditional.rs  unsafety.rs
hafnia-core/src/analysis/borrows/: ascription.rs  borrow_check.rs  liveness.rs  loan_scope.rs  mod.rs  regions.rs  util.rs
hafnia-core/src/analysis/graph/: algorithm.rs  dominators.rs  mod.rs
hafnia-core/src/codegen/: mod.rs
hafnia-core/src/codegen/dynamic/: compute.rs  gates.rs  mem.rs  mod.rs  uncompute_pts.rs
hafnia-core/src/codegen/static/: mod.rs
hafnia-core/src/opt/: const_prop.rs  def_use_chains.rs  unipotence.rs
hafnia-core/tests/: circuit_tests.rs  integration_tests.rs
hafnia-core/tests/circuit/: circuit_test.py  circuits.py  mod.rs
hafnia-core/tests/common/: mod.rs
hafnia-inline/: Cargo.toml
hafnia-inline/src/: lib.rs  types.rs
hafnia-macros/: Cargo.toml
hafnia-macros/src/: lib.rs
hafnia/src/: lib.rs
src/: alloc.rs  arch.rs  ast.rs  backend.rs  cavy_errors.rs  circuit.rs  cli.yml  compile.rs  environment.rs  errors.rs  functions.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  qram.rs  repl.rs  scanner.rs  session.rs  source.rs  sys.rs  target.rs  token.rs  typecheck.rs  types.rs  values.rs
