[package]
name = "cavy"
version = "0.1.0"
authors = ["mcncm <cavy-lang-support@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.0"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
     