[package]
name = "cavy"
version = "0.1.0"
authors = ["mcncm <cavy-lang-support@mit.edu>"]
edition = "2018"
build = "build.rs"

[dependencies]
lazy_static = "1.0"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
dirs = "2.0.2"
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[profile.release]
lto = "fat"
codegen-units = 1
