[package]
name = "cavy-cli"
version = "0.1.0"
authors = ["mcncm <33966432+mcncm@users.noreply.github.com>"]
edition = "2021"
repository = "https://github.com/mcncm/cavy-lang"
keywords = ["language"]
description = """
A compiler for Cavy, an imperative quantum programming language.
"""

[[bin]]
name = "cavyc"
path = "src/main.rs"

[dependencies]
cavy-core = { path = "../cavy-core", features = ["summary"] }
clap = { version = "3.0.0-beta.4" }
