[package]
authors = ["mcncm <cavy-lang-support@mit.edu>"]
build = "build.rs"
edition = "2018"
name = "cavy-core"
version = "0.1.0"

[dependencies]

[dependencies.cavy-macros]
path = "../cavy-macros"

[dev-dependencies]
[dev-dependencies.cargo-husky]
default-features = false
features = ["user-hooks"]
version = "1"
