[package]
authors = ["mcncm <cavy-lang-support@mit.edu>"]
build = "build.rs"
edition = "2018"
name = "cavy-core"
version = "0.1.0"

[dependencies]
# We don't actually need `derive` for *all* uses of serde. It's currently used
# by `cavy-inline`, but doesn't need to be, in principle. It's not used at all
# by the `summary` target.
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", features = ["preserve_order"], optional = true }
bitvec = "0.22"
smallvec = "1.6"

[features]
default = []
# The non-default "summary" target that is included in the CLI.
summary = ["serde", "serde_json"]

[dependencies.cavy-macros]
path = "../cavy-macros"

[dev-dependencies.cargo-husky]
default-features = false
features = ["user-hooks"]
version = "1"
