[package]
name = "cavy"
version = "0.1.0"
authors = ["mcncm <33966432+mcncm@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[dependencies]
cavy-core = { path = "../cavy-core" }

[dependencies.cavy-comptime]
optional = true
path = "../cavy-comptime"

[features]
default = ["comptime"]
comptime = ["cavy-comptime"]
