[package]
name = "hafnia-cli"
version = "0.1.0"
authors = ["mcncm <33966432+mcncm@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/mcncm/hafnia-lang"
keywords = ["language"]
description = """
A compiler for Hafnia, an imperative quantum programming language.
"""

[[bin]]
name = "hafniac"
path = "src/main.rs"

[dependencies]
hafnia-core = { path = "../hafnia-core", features = ["summary"] }
clap = { version = "3.0.0-beta.4" }
