[package]
name = "hafnia-inline"
version = "0.1.0"
authors = ["mcncm <33966432+mcncm@users.noreply.github.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
hafnia-core = { path = "../hafnia-core" }
serde_json = "1.0"
quote = "1.0"
syn = "1.0"

[features]
default = ["hafnia-core/serde", "hafnia-core/serde_json"]
